Harvester given a shorter burst MG
give armed harvesters a different gun.
on Russia faction accomodate for the cost difference of harvester when selling the refinery.

--- a/mods/sovra/maps/desert-shellmap/rules.yaml
+++ b/mods/sovra/maps/desert-shellmap/rules.yaml
@@ -13,7 +13,7 @@ World:
 	-SpawnStartingUnits:
 	-MapStartingLocations:
 	MusicPlaylist:
-		BackgroundMusic: intro
+		BackgroundMusic: hell226m
 		AllowMuteBackgroundMusic: true
 		DisableWorldSounds: true
 	LuaScript:
