Spy Plane cloak detection
Spy Plane will detect cloaked ground units.

--- a/mods/sovra/rules/structures.yaml
+++ b/mods/sovra/rules/structures.yaml
@@ -1805,7 +1805,7 @@ AFLD:
 		Icon: spyplane
 		ChargeInterval: 3750
 		Name: Spy Plane
-		Description: Reveals an area of the map.
+		Description: Reveals an area of the map.\nDetects cloaked units.
 		SelectTargetSpeechNotification: SelectTarget
 		EndChargeSpeechNotification: SpyPlaneReady
 		SelectTargetTextNotification: Select target.
