--- a/mods/sovra/rules/misc.yaml
+++ b/mods/sovra/rules/misc.yaml
@@ -207,6 +207,8 @@ camera.spyplane:
 	Inherits: CAMERA
 	EditorOnlyTooltip:
 		Name: (support power proxy camera)
+	DetectCloaked:
+		Range: 10c0
 
 SONAR:
 	Inherits: camera.spyplane
@@ -224,7 +226,7 @@ PROXYSONAR:
 	Interactable:
 		Bounds: 1024, 1024
 	WithSpriteBody:
-	HiddenUnderFog:
+	AlwaysVisible:
 	Health:
 		HP: 1
 		NotifyAppliedDamage: false
