--- a/mods/sovra/weapons/other.yaml
+++ b/mods/sovra/weapons/other.yaml
@@ -26,12 +26,14 @@
 
 FireballLauncher:
 	Inherits: ^FireWeapon
+	Range: 6c0
 	Burst: 2
 	BurstDelays: 20
 	Projectile: Bullet
 		Speed: 250
 		TrailImage: fb2
 		Image: FB1
+        Blockable: false
 	Warhead@1Dam: SpreadDamage
 		Versus:
 			Light: 50
