--- a/mods/sovra/rules/vehicles.yaml
+++ b/mods/sovra/rules/vehicles.yaml
@@ -100,6 +100,8 @@ V2RL:
 	WithProductionIconOverlay:
 		Types: Veterancy
 		Prerequisites: vehicles.upgraded
+	SpawnActorOnDeath:
+		Actor: 1TNK.Husk
 
 2TNK:
 	Inherits: ^TrackedVehicle
