--- a/mods/sovra/weapons/missiles.yaml
+++ b/mods/sovra/weapons/missiles.yaml
@@ -76,6 +76,7 @@ Dragon:
 	Inherits: ^AntiGroundMissile
 	Projectile: Missile
 		TrailImage: smokey
+        Blockable: true
 
 HellfireAG:
 	Inherits: ^AntiGroundMissile
@@ -123,6 +124,7 @@ MammothTusk:
 		Speed: 341
 		HorizontalRateOfTurn: 60
 		RangeLimit: 9c614
+        Blockable: true
 	Warhead@1Dam: SpreadDamage
 		ValidTargets: AirborneActor, Infantry
 		Spread: 256
@@ -183,6 +185,7 @@ Stinger:
 		RangeLimit: 9c512
 		Speed: 170
 		CloseEnough: 149
+        Blockable: true
 	Warhead@1Dam: SpreadDamage
 		Damage: 2500
 		Versus:
@@ -198,6 +201,7 @@ StingerAA:
 	Projectile: Missile
 		Speed: 255
 		CloseEnough: 298
+        Blockable: false
 	Warhead@1Dam: SpreadDamage
 		ValidTargets: AirborneActor
 		Damage: 1650
@@ -216,6 +220,7 @@ APTusk:
 		TrailImage: smokey
 		HorizontalRateOfTurn: 40
 		RangeLimit: 7c204
+        Blockable: true
 
 APTusk.stnk:
 	Inherits: APTusk
