revert Thief uncrushability
remove the change regarding Thief becoming uncrushable on movement.

and another:
reduce the range of Flamethrower by one.

--- a/mods/sovra/weapons/other.yaml
+++ b/mods/sovra/weapons/other.yaml
@@ -41,6 +41,7 @@ FireballLauncher:
 Flamer:
 	Inherits: ^FireWeapon
 	ReloadDelay: 50
+	Range: 4c0
 	Burst: 15
 	BurstDelays: 1
 	Projectile: Bullet
