Inaccuracy for Flak
added slight inaccuracy over the distance to Flak Guns, suppose they will occasionally miss a shot.

--- a/mods/sovra/weapons/smallcaliber.yaml
+++ b/mods/sovra/weapons/smallcaliber.yaml
@@ -4,6 +4,8 @@
 	Report: aacanon3.aud
 	ValidTargets: AirborneActor
 	Projectile: InstantHit
+		Inaccuracy: 128
+		InaccuracyType: PerCellIncrement
 	Warhead@1Dam: SpreadDamage
 		Spread: 213
 		Damage: 900
