Naval Transport carry capacity change
LST cargo capacity upgraded to 8 from 5
Vehicles take 2 space in transports up from only 1
MCV, APC, Phase Transport, Mammoth Tank, and M.A.D. Tank take up 4 space
LST price to 900 from 700

--- a/mods/sovra/rules/defaults.yaml
+++ b/mods/sovra/rules/defaults.yaml
@@ -253,6 +253,7 @@
 	Chronoshiftable:
 	Passenger:
 		CargoType: Vehicle
+        Weight: 2
 	AttackMove:
 	HiddenUnderFog:
 	ActorLostNotification:
