--- a/mods/sovra/rules/aircraft.yaml
+++ b/mods/sovra/rules/aircraft.yaml
@@ -397,7 +397,7 @@ HIND:
 		Prerequisites: ~airproduction, stek, ~aircraft.soviet, ~techlevel.high
 		Description: Helicopter gunship armed\nwith dual chainguns.\n\n  Strong vs Infantry, Light armor\n  Weak vs Tanks, Aircraft
 	Valued:
-		Cost: 1400
+		Cost: 1550
 	Tooltip:
 		Name: Hind
 	UpdatesPlayerStatistics:
@@ -419,7 +419,7 @@ HIND:
 		PauseOnCondition: !ammo
 	Armament@SECONDARY:
 		Name: secondary
-		Weapon: ChainGun
+		Weapon: ChainGunAA
 		LocalOffset: 85,213,-85, 85,-213,-85
 		MuzzleSequence: muzzle
 		PauseOnCondition: !ammo
