--- a/mods/sovra/rules/structures.yaml
+++ b/mods/sovra/rules/structures.yaml
@@ -467,7 +467,7 @@ SYRD:
 IRON:
 	Inherits: ^ScienceBuilding
 	Inherits@IDISABLE: ^DisableOnLowPowerOrPowerDown
-	Inherits@shape: ^2x1Shape
+	Inherits@shape: ^2x2Shape
 	Buildable:
         BuildDuration: 1500
         BuildDurationModifier: 100
@@ -481,11 +481,10 @@ IRON:
 	Tooltip:
 		Name: Iron Curtain
 	Building:
-		Footprint: xx
-		Dimensions: 2,1
+		Footprint: xx xx
+		Dimensions: 2,2
 	Selectable:
-		Bounds: 2048, 1194, 0, 85
-		DecorationBounds: 2133, 2133, 0, -512
+		Bounds: 2048, 2133, 0, -170
 	Health:
 		HP: 100000
 	Armor:
