Targeting Helpers for some units.
add secondary dummy weapons to Medic and Mechanic that will theoretically help the AI to not suicide those units into an enemy blob.
On the V2 Launcher added a secondary targeting helper weapon that helps it stay at range while reloading instead of driving up to target.

other changes:
try to fix Air Dropped Tanks by AI sometimes exploding by themselves.

--- a/mods/sovra/rules/infantry.yaml
+++ b/mods/sovra/rules/infantry.yaml
@@ -509,6 +509,13 @@ MEDI:
 		OutsideRangeCursor: heal
 		TargetRelationships: Ally
 		ForceTargetRelationships: None
+	Armament@AI:
+		Weapon: TargetingHelper
+		LocalOffset: 0,0,0
+		RequiresCondition: enable-helper
+	GrantConditionOnBotOwner@aiplayer:
+		Condition: enable-helper
+		Bots: unplugged
 	WithInfantryBody:
 		IdleSequences: idle
 		StandSequences: stand
@@ -559,6 +566,13 @@ MECH:
 		OutsideRangeCursor: repair
 		TargetRelationships: Ally
 		ForceTargetRelationships: None
+	Armament@AI:
+		Weapon: TargetingHelper
+		LocalOffset: 0,0,0
+		RequiresCondition: enable-helper
+	GrantConditionOnBotOwner@aiplayer:
+		Condition: enable-helper
+		Bots: unplugged
 	AttackFrontal:
 		Voice: Action
 		FacingTolerance: 0
