--- a/mods/sovra/rules/defaults.yaml
+++ b/mods/sovra/rules/defaults.yaml
@@ -1094,6 +1094,9 @@
 	Chronoshiftable:
 	Tooltip:
 		GenericName: Destroyed Vehicle
+	Explodes:
+		Weapon: VisualExplodeHusk
+		EmptyWeapon: VisualExplodeHusk
 
 ^LightHusk:
     Inherits: ^Husk
