England Spy also trained faster
England bonus for Spy now also train at half duration.

--- a/mods/sovra/rules/infantry.yaml
+++ b/mods/sovra/rules/infantry.yaml
@@ -404,6 +404,9 @@ SPY:
     ProductionCostMultiplier@england:
         Multiplier: 50
         Prerequisites: infantry.england
+    ProductionTimeMultiplier@england:
+        Multiplier: 50
+        Prerequisites: infantry.england
     GivesExperienceMultiplier@england:
         Modifier: 150
         RequiresCondition: owner.england
